Verify variable conversions and remove comments.

--- a/css/blocks.scss
+++ b/css/blocks.scss
@@ -16,12 +16,12 @@
 		margin-right: auto;
 
 		@include media( tablet ) {
-			max-width: $x-grid-column-9; /* @include globalvar(max-width, column-9); */
-			margin-right: $x-grid-column-2; /* @include globalvar(margin-right, column-2); */
+			max-width: $x-grid-column-9;
+			margin-right: $x-grid-column-2;
 		}
 
 		@include media( wide ) {
-			margin-right: $x-grid-column-2; /* 			@include globalvar(margin-right, column-2); */
+			margin-right: $x-grid-column-2;
 		}
 	}
 
@@ -36,8 +36,8 @@
 		max-width: 285px;
 
 		@include media( tablet ) {
-			margin-left: $x-grid-column-4;	/* @include globalvar( margin-left, column-4 ); */
-			margin-right: $x-space-sm; /* @include globalvar( margin-right, sm);*/
+			margin-left: $x-grid-column-4;
+			margin-right: $x-space-sm;
 			margin-left: calc( 100vw - ( $x-grid-column-10 - $x-grid-gutter ) );
 			max-width: $x-grid-column-3;
 		}
@@ -52,7 +52,7 @@
 		max-width: 285px;
 
 		@include media( tablet ) {
-			margin-left: $x-space-sm; /* @include globalvar( margin-left, sm); */
+			margin-left: $x-space-sm;
 			max-width: $x-grid-column-3;
 		}
 	}
@@ -62,15 +62,15 @@
 
 .wp-block-button .wp-block-button__link{
 
-	background-color: $x-color-primary-base; /* @include globalvar(background-color, primary-base); */
-	color: $x-color-background-body; /* @include globalvar(color, background); */
-	padding: ($x-space-xxs, $x-space-xs); /* @include block-padding( xxs, xs );*/
-	font-family: $heading-font; /* @include globalvar(font-family, heading); */
-	font-size: $x-font-size-sm; /* @include globalvar(font-size, sm); */
-	line-height: $x-font-leading-body; /* @include globalvar(line-height, body); */
+	background-color: $x-color-primary-base;
+	color: $x-color-background-body;
+	padding: $x-space-xxs, $x-space-xs;
+	font-family: $x-font-family-heading;
+	font-size: $x-font-size-sm;
+	line-height: $x-font-leading-body;
 	@include rounded( 3px );
 	border: 2px solid green;
-	border-color: $primary-color; /* @include globalvar(border-color, primary); */
+	border-color: $x-color-primary-base;
 	box-shadow: 1px 1px 5px 1px rgba(0,0,0,0.33);
 	cursor: pointer;
 	display: inline-block;
@@ -79,20 +79,20 @@
 	text-transform: uppercase;
 
 	&:hover {
-		border-color: $primary-color; /* @include globalvar(border-color, primary); */
-		background-color: $x-color-shade-white; /* @include globalvar(background-color, shade-white); */
-		color: $primary-color; /* @include globalvar(color, primary); */
+		border-color: $x-color-primary-base;
+		background-color: $x-color-shade-white;
+		color: $x-color-primary-base;
 	}
 
 	&:active,
 	&:focus {
-		border-color: $x-color-border-base; /* @include globalvar(border-color, base); */
-		background-color: $x-color-shade-white; /* @include globalvar(background-color, shade-white); */
-		color: $x-color-words-subtle; /* @include globalvar(color, subtle); */
+		border-color: $x-color-border-base;
+		background-color: $x-color-shade-white;
+		color: $x-color-words-subtle;
 	}
 
 	@include media( tablet ) {
-		padding: ($x-space-xs, $x-space-sm); /* @include block-padding( xs, sm ); */
+		padding: $x-space-xs $x-space-sm;
 	}
 }
 
@@ -150,20 +150,20 @@
 	}
 
 	&.alignleft {
-		margin-top: 0; /* @include globalvar( margin-top, 0 ); */
-		margin-right: $x-space-sm; /* @include globalvar( margin-right, sm ); */
+		margin-top: 0;
+		margin-right: $x-space-sm;
 	}
 	&.alignright {
-		margin-top: 0; /* @include globalvar( margin-top, 0 ); */
-		margin-left: $x-space-sm; /* @include globalvar( margin-left, sm ); */
+		margin-top: 0;
+		margin-left: $x-space-sm;
 	}
 
 	.wp-block-cover-image-text,
 	h2 {
 		font-weight: 400;
-		padding: $x-space-sm; /* @include globalvar( padding, xs ); */
-		font-family: $body-font; /* @include globalvar( font-family, body ); */
-		line-height: $x-font-leading-heading; /* @include globalvar( line-height, heading ); */
+		padding: $x-space-sm;
+		font-family: $x-font-family-body;
+		line-height: $x-font-leading-heading;
 		letter-spacing: normal;
 		text-transform: none;
 		margin: 0;
@@ -236,10 +236,10 @@
 .wp-block-gallery .blocks-gallery-item figcaption,
 .wp-block-quote .wp-block-quote__citation,
 .wp-block-pullquote .wp-block-pullquote__citation {
-	color: $x-color-words-subtle; /* @include globalvar(color, subtle); */
-	font-size: $x-font-size-xs; /* @include globalvar(font-size, xs); */
-	font-family: $heading-font; /* @include globalvar(font-family, heading); */
-	padding: $x-space-xxs, 0; /* @include block-padding( xxs, 0 ); */
+	color: $x-color-words-subtle;
+	font-size: $x-font-size-xs;
+	font-family: $x-font-family-heading;
+	padding: $x-space-xxs, 0;
 	font-style: normal;
 	text-align: left;
 	text-transform: none;
@@ -251,7 +251,7 @@
 .wp-block-image.alignfull figcaption,
 .wp-block-gallery.alignfull .blocks-gallery-image figcaption,
 .wp-block-gallery.alignfull .blocks-gallery-item figcaption {
-	padding: $x-space-xs, $x-space-sm; /* @include block-padding( xs, sm); */
+	padding: $x-space-xs, $x-space-sm;
 }
 
 // !Columns
@@ -275,12 +275,12 @@
 
 	&.has-4-columns .wp-block-column {
 		width: calc( 25% - ( $x-grid-gutter * .25 ) );
-		font-size: $x-font-size-sm; /* @include globalvar(font-size, sm); */
+		font-size: $x-font-size-sm;
 	}
 
 	@include media( tablet ) {
-		margin-right: $x-grid-column-2; /* @include globalvar(margin-right, column-2); */
-		max-width: $x-grid-column-8; /* @include globalvar(max-width, column-8); */
+		margin-right: $x-grid-column-2;
+		max-width: $x-grid-column-8;
 	}
 }
 
@@ -291,10 +291,10 @@ ul.wp-block-archives,
 ul.wp-block-latest-posts {
 
 	li {
-		font-size: $x-font-size-md; /* @include globalvar(font-size, md); */
+		font-size: $x-font-size-md;
 
 		&:before {
-			font-size: $x-font-size-xxs; /* @include globalvar(font-size, xxs); */
+			font-size: $x-font-size-xxs;
 			line-height: 2.4em;
 		}
 	}
@@ -307,8 +307,8 @@ ul.wp-block-latest-posts {
 		justify-content: space-between;
 
 		li {
-			margin-right: 0; /* @include globalvar( margin-right, 0 ); */
-			margin-bottom: $x-space-sm; /* @include globalvar( margin-bottom, sm); */
+			margin-right: 0;
+			margin-bottom: $x-space-sm;
 		}
 	}
 
@@ -331,11 +331,11 @@ ul.wp-block-latest-posts {
 	}
 
 	tr:nth-child(even) {
-		background-color: $x-color-shade-gray-1; /* @include globalvar(background-color, shade-gray-1); */
+		background-color: $x-color-shade-gray-1;
 	}
 
 	thead tr:nth-child(odd) {
-		background-color: $x-color-primary-bg; /* @include globalvar(background-color, primary-bg); */
+		background-color: $x-color-primary-bg;
 	}
 }
 
@@ -346,7 +346,7 @@ table.wp-block-table {
 	max-width: calc( 100% - ( $x-space-sm * 2 ) );
 
 	@include media( tablet ) {
-		max-width: $x-grid-column-7; /* @include globalvar(max-width, column-7); */
+		max-width: $x-grid-column-7;
 	}
 }
 
@@ -382,65 +382,65 @@ table.wp-block-table {
 .wp-block-quote.is-large,
 .wp-block-quote.is-style-large {
 
-	padding: $x-space-sm, 0; /* @include block-padding( sm, 0 ); */
-	margin-top: $x-space-lg; /* @include globalvar( margin-top, lg ); */
-	margin-bottom: $x-space-lg; /* @include globalvar( margin-bottom, lg ); */
-	margin-left: $x-space-sm;  /* @include globalvar( margin-left, sm); */
-	margin-right: $x-space-sm; /* @include globalvar( margin-right, sm); */
+	padding: $x-space-sm, 0;
+	margin-top: $x-space-lg;
+	margin-bottom: $x-space-lg;
+	margin-left: $x-space-sm;
+	margin-right: $x-space-sm;
 	border-top: 1px solid green;
-	border-top-color: $primary-color; /* @include globalvar( border-top-color, primary ); */
+	border-top-color: $primary-color;
 
 	p {
-		padding: $x-space-xs, $x-space-sm; /* @include block-padding( xs, sm ); */
-		font-size: $x-font-size-lg; /* @include globalvar(font-size, lg); */
+		padding: $x-space-xs, $x-space-sm;
+		font-size: $x-font-size-lg;
 		font-style: normal;
 	}
 
 	&.is-large p,
 	&.is-style-large p {
-		font-size: $x-font-size-xl; /* @include globalvar(font-size, xl); */
-		line-height: $x-font-family-heading; /* @include globalvar(line-height, heading); */
+		font-size: $x-font-size-xl;
+		line-height: $x-font-family-heading;
 	}
 
 	cite {
-		font-family: $x-font-family-heading; /* @include globalvar(font-family, heading); */
-		font-size: $x-font-size-xs; /* @include globalvar(font-size, xs); */
-		color: $x-color-words-subtle; /* @include globalvar(color, subtle); */
-		padding: 0, $x-space-sm; /* @include block-padding( 0, sm ); */
+		font-family: $x-font-family-heading;
+		font-size: $x-font-size-xs;
+		color: $x-color-words-subtle;
+		padding: 0, $x-space-sm;
 		font-style: normal;
 		font-weight: 500;
 	}
 
 	@include media( tablet ) {
-		max-width: $x-grid-column-7; /* @include globalvar(max-width, column-7); */
-		margin-right: $x-grid-column-3; /* @include globalvar(margin-right, column-3); */
+		max-width: $x-grid-column-7;
+		margin-right: $x-grid-column-3;
 		margin-left: auto;
 	}
 }
 
 .wp-block-pullquote {
 
-	margin-top: $x-space-lg; /* @include globalvar(margin-top, lg); */
-	margin-bottom: $x-space-lg; /* @include globalvar(margin-bottom, lg); */
+	margin-top: $x-space-lg;
+	margin-bottom: $x-space-lg;
 	text-align: inherit;
 	padding: 0;
 
 	& > p {
-		font-size: $x-font-size-lg; /* @include globalvar(font-size, lg); */
+		font-size: $x-font-size-lg;
 		font-style: normal;
 	}
 
 	&.is-large p,
 	&.is-style-large p {
-		font-size: $x-font-size-xl; /* @include globalvar(font-size, xl); */
-		line-height: $x-font-leading-heading; /* @include globalvar(line-height, heading); */
+		font-size: $x-font-size-xl;
+		line-height: $x-font-leading-heading;
 	}
 
 	blockquote,
 	& > p,
 	& > cite {
-		padding-left: $x-space-sm; /* @include globalvar(padding-left, sm); */
-		padding-right: $x-space-sm; /* @include globalvar(padding-right, sm); */
+		padding-left: $x-space-sm;
+		padding-right: $x-space-sm;
 	}
 
 	&.alignwide,
@@ -451,8 +451,8 @@ table.wp-block-table {
 		& > cite {
 
 			@include media( tablet ) {
-				padding-left: $grid-gutter; /* @include globalvar(padding-left, gutter); */
-				padding-right: $grid-gutter; /* @include globalvar(padding-right, gutter); */
+				padding-left: $grid-gutter;
+				padding-right: $grid-gutter;
 			}
 		}
 	}
@@ -460,13 +460,13 @@ table.wp-block-table {
 	&.alignleft,
 	&.alignright {
 		margin-top: 0;
-		margin-bottom: $x-space-sm; /* @include globalvar(margin-bottom, sm); */
+		margin-bottom: $x-space-sm;
 
 		blockquote {
 			margin-top: 0;
 			margin-bottom: 0;
 			p {
-				font-size: $x-font-size-md; /* @include globalvar(font-size, md); */
+				font-size: $x-font-size-md;
 				padding-top: 0;
 			}
 		}
@@ -480,19 +480,19 @@ table.wp-block-table {
 // !Separators
 
 .wp-block-separator {
-	margin-top: $x-space-md; /* @include globalvar( margin-top, md ); */
-	margin-bottom: $x-space-md; /* @include globalvar( margin-bottom, md ); */
+	margin-top: $x-space-md;
+	margin-bottom: $x-space-md;
 	padding: 0;
 
 	&.is-style-dots {
 
-		background-color: $x-color-shade-white; /* @include globalvar( background-color, white ); */
+		background-color: $x-color-shade-white;
 
 		&:before {
 			content: "\00b7 \00b7 \00b7 \00b7 \00b7";
-			color: $x-color-shade-gray-4; /* @include globalvar( color, shade-gray-4 ); */
+			color: $x-color-shade-gray-4;
 			font-family: $body-font; /* family@include globalvar(font-family, body); */
-			font-size: $x-font-size-lg; /* @include globalvar(font-size, lg); */
+			font-size: $x-font-size-lg;
 			letter-spacing: 1em;
 			padding-left: 1em;
 		}
@@ -500,7 +500,7 @@ table.wp-block-table {
 
 	@include media( tablet ) {
 		&.is-style-dots {
-			max-width: $x-grid-column-6; /* @include globalvar(max-width, column-6); */
+			max-width: $x-grid-column-6;
 		}
 	}
 }
